# django-importexport-flow

./: .gitignore  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
docs/: AI.md  README.md  development.md  filters-and-export.md  import-data.md  installation.md  purpose.md  structure.md
scripts/: reset_django_importexport_flow.sql
src/django_importexport_flow/: __init__.py  apps.py  forms.py  managers.py  tasks.py
src/django_importexport_flow/admin/: __init__.py  export_definition.py  export_request.py  generate_export.py  import_config.py  import_data.py  import_definition.py  import_request.py
src/django_importexport_flow/engine/: __init__.py  core.py  csv.py  excel.py  json.py  pdf.py  table.py
src/django_importexport_flow/engine/core/: __init__.py  delegate.py  engine.py  io.py  (+11 more)
src/django_importexport_flow/management/: __init__.py
src/django_importexport_flow/migrations/: 0001_initial.py  0002_exportdefinition_delegate_method_and_more.py  0003_alter_exportconfigtable_configuration.py  0004_alter_exportconfigtable_configuration.py
src/django_importexport_flow/models/: __init__.py  config_pdf.py  config_table.py  data_preview.py  export_definition.py  export_request.py  import_definition.py  import_request.py  related_object.py
src/django_importexport_flow/task/: __init__.py  celery.py  django_rq.py  sync.py  thread.py
src/django_importexport_flow/utils/: __init__.py  export.py  filter_form.py  helpers.py  http.py  import_tabular.py  lookup.py  process.py  recoverable_errors.py  serialization.py  upload_validation.py  validation.py
tests/: conftest.py  settings.py  test_admin_import_config.py  test_callable_column_paths.py  test_delegate_method.py  test_engine.py  test_export_audit.py  test_export_config_annotations.py  test_export_definition_queryset.py  test_export_generate.py  test_export_json.py  test_filter_mandatory.py  test_import_definition.py  test_import_json.py  test_import_mass_errors.py  test_import_request.py  test_import_task.py  test_json_engine.py  test_lookup.py  test_management_commands.py  test_report_import.py  test_report_import_ask.py  test_sample_report_fixtures.py  test_upload_validation.py  test_validate_import.py  test_validation.py
tests/fixtures/: import_book.csv
tests/sample/: admin.py  apps.py  models.py
tests/sample/migrations/: 0001_initial.py
tests/sample/report_fixtures/: build_fixtures.py  report_export_authors.json  report_export_books.json
(+8 files in other folders)
