[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-importexport-flow"
version = "0.3.0"
description = "Declarative export and import definitions for Django (queryset, tabular/PDF, hooks)."
readme = "README.md"
authors = [{ name = "Octolo", email = "dev@octolo.tech" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "django",
    "reporting",
    "export",
    "csv",
    "excel",
    "pdf",
    "contenttypes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=3.2",
    "django-boosted>=1.0.0",
    "django-virtualqueryset>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "django-namedid>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/octolo/django-importexport-flow"
Repository = "https://github.com/octolo/django-importexport-flow"
Documentation = "https://github.com/octolo/django-importexport-flow/blob/main/docs/README.md"
Issues = "https://github.com/octolo/django-importexport-flow/issues"

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.5",
    "ruff>=0.5",
    "mypy>=1.0",
    "django-stubs>=5.0.0",
    "weasyprint>=62.0",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["django_importexport_flow*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/sample/report_fixtures/build_fixtures.py" = ["E402"]
